# cevns_sim

./: CMakeLists.txt  README.md  cevns_sim.cc  run.sh
analysis/: analysis.ipynb
analysis/transfer_matrix/: display_histogram.c
config/ArgonSlabCEVNS/: box_dim.txt
src/: GlobalConstants.hh
src/Analysis/: AnalysisManagerWrapper.cc  AnalysisManagerWrapper.hh
src/Commands/: PrimaryGeneratorActionCommand.hh  WriteRecordingCommand.cc  WriteRecordingCommand.hh
src/DetectorGeometry/: DuneFDDetectorConstruction.cc  DuneFDDetectorConstruction.hh  DuneFDSensitiveDetector.cc  DuneFDSensitiveDetector.hh
src/EventTypeHandler/: PrimaryGeneratorActionCommand.cc  PrimaryGeneratorActionCommand.hh  PrimaryGeneratorActionDispatcher.cc  PrimaryGeneratorActionDispatcher.hh
src/EventTypes/: CEvNSPrimaryGeneratorAction.cc  CEvNSPrimaryGeneratorAction.hh
src/PGAHandler/: PrimaryGeneratorActionDispatcher.cc  PrimaryGeneratorActionDispatcher.hh
src/PhysicalProcesses/: CombinedPhysicsList.cc  CustomOpticalPhysics.cc  CustomOpticalPhysics.hh  PhysicsList.cc  PhysicsList.hh
src/PhysicsLists/: CombinedPhysicsList.hh
src/PrimaryGeneratorActions/: CEvNSPrimaryGeneratorAction.cc  CEvNSPrimaryGeneratorAction.hh
src/SimulationActions/: CEvNSEventAction.cc  CEvNSEventAction.hh  CEvNSEventData.cc  CEvNSEventData.hh  DebugRunAction.cc  DebugRunAction.hh  DebugSteppingAction.cc  DebugSteppingAction.hh  DefaultRunAction.cc  DefaultRunAction.hh
